@@ -602,8 +602,8 @@ void DRD_(thread_pre_cancel)(const DrdThreadId tid)
 /**
  * Store the POSIX thread ID for the specified thread.
  *
- * @note This function can be called two times for the same thread -- see also
- * the comment block preceding the pthread_create() wrapper in
+ * @note This function can be called multiple times for the same thread -- see
+ * also the comment block preceding the pthread_create() wrapper in
  * drd_pthread_intercepts.c.
  */
 void DRD_(thread_set_pthreadid)(const DrdThreadId tid, const PThreadId ptid)
@@ -613,6 +613,10 @@ void DRD_(thread_set_pthreadid)(const DrdThreadId tid, const PThreadId ptid)
    tl_assert(DRD_(g_threadinfo)[tid].pt_threadid == INVALID_POSIX_THREADID
              || DRD_(g_threadinfo)[tid].pt_threadid == ptid);
    tl_assert(ptid != INVALID_POSIX_THREADID);
+   if (DRD_(g_threadinfo)[tid].posix_thread_exists) {
+      tl_assert(DRD_(g_threadinfo)[tid].pt_threadid == ptid);
+      return;
+   }
    DRD_(g_threadinfo)[tid].posix_thread_exists = True;
    DRD_(g_threadinfo)[tid].pt_threadid         = ptid;
 
